// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders the outline variant correctly 1`] = `
<button
  className="rounded focus:outline-black dark:focus:outline-white bg-transparent hover:bg-transparent dark:text-white"
  onClick={[MockFunction]}
  type="button"
>
  Testing
</button>
`;

exports[`Button renders the primary variant correctly 1`] = `
<button
  className="rounded focus:outline-black dark:focus:outline-white text-white button-gradient"
  onClick={[MockFunction]}
  type="button"
>
  Testing
</button>
`;
